fix: correct text overflow causing movie misalignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -605,6 +605,7 @@ p>a:hover {
 .movie-text,
 .search-results-container h4 {
     height: 80px;
+    max-width: 170px;
     text-align: center;
     margin-bottom: 0;
     padding-top: 2px;
